<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="com.example.splashscreen.Data" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".SignUp">

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/shape"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/shape"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0" />

                <ImageView
                    android:id="@+id/imglogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/login" />

                <EditText
                    android:id="@+id/fullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/form1"
                    android:drawableStart="@drawable/ic_personne"
                    android:ems="10"
                    android:hint="@string/fullName"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:paddingStart="30dp" />

                <EditText
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/form1"
                    android:drawableStart="@drawable/ic_email"
                    android:ems="10"
                    android:hint="@string/login"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:paddingStart="30dp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/form1"
                    android:drawableStart="@drawable/ic_lock"
                    android:ems="10"
                    android:hint="@string/password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:paddingStart="30dp" />

                <EditText
                    android:id="@+id/tel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/form1"
                    android:drawableStart="@drawable/ic_phone1"
                    android:ems="10"
                    android:hint="@string/tel"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:paddingStart="30dp" />

                <EditText
                    android:id="@+id/adress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/form1"
                    android:drawableStart="@drawable/ic_address"
                    android:ems="10"
                    android:hint="@string/adress"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:layout_marginRight="20dp"
                    android:paddingStart="30dp" />

                <Spinner
                    android:id="@+id/sexe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:entries="@array/sexe"
                    android:minHeight="48dp"
                    android:paddingStart="30dp" />

                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/SignUp"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:background="@drawable/form1"
                    tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />
                <TextView
                    android:id="@+id/question"
                    android:layout_width="200dp"
                    android:layout_marginLeft="40dp"
                    android:layout_height="wrap_content"
                    android:text="@string/signin"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/txtSignIn"
                    android:layout_width="298dp"
                    android:layout_height="wrap_content"
                    android:text="@string/txtSignIn"
                    android:gravity="right"
                    android:textColor="@color/statusbar"
                    android:textSize="15sp" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>