<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="com.example.splashscreen.Data" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        tools:context=".SignIn">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="184dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">

                <ImageView
                    android:id="@+id/shape"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/shape"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0" />

                <TextView
                    android:id="@+id/acceuil"
                    android:layout_width="298dp"
                    android:layout_height="wrap_content"
                    android:text="Acceuil"
                    android:gravity="right"
                    android:textColor="@color/statusbar"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/imglogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/login" />

                <EditText
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="15dp"
                    android:background="@drawable/form1"
                    android:drawableStart="@drawable/ic_email"
                    android:ems="10"
                    android:hint="@string/login"
                    android:inputType="textEmailAddress"
                    android:minHeight="50dp"
                    android:paddingStart="30dp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/form1"
                    android:drawableStart="@drawable/ic_lock"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:minHeight="50dp"
                    android:paddingStart="30dp"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/forgot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="30dp"
                    android:gravity="right"
                    android:text="@string/forgot_password"
                    android:textColor="@color/purple_500"
                    android:textSize="14sp"
                    android:transitionName="splash_text" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textSize="20dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/form1"
                    android:text="@string/login" />

                <TextView
                    android:id="@+id/question"
                    android:layout_width="200dp"
                    android:layout_marginLeft="40dp"
                    android:layout_height="wrap_content"
                    android:text="@string/signup"
                    android:textColor="@color/black"
                    android:textSize="15dp" />

                <TextView
                    android:id="@+id/signUp"
                    android:layout_width="298dp"
                    android:layout_height="wrap_content"
                    android:text="@string/SignUp"
                    android:gravity="right"
                    android:textColor="@color/statusbar"
                    android:textSize="15sp" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>