<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="com.example.splashscreen.Data" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Virement">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:layout_marginBottom="79dp"
                android:background="@color/statusbar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" >

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="50dp"
                    android:id="@+id/retour"
                    android:src="@drawable/ic_retour"/>
            </FrameLayout>

            <ImageView
                android:id="@+id/shape"
                android:layout_width="316dp"
                android:layout_height="384dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="-100dp"
                android:contentDescription="TODO"
                android:src="@drawable/ic_vire"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0" />

            <Button
                android:id="@+id/btnVirement"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="-55dp"
                android:layout_marginLeft="270dp"
                android:text="@string/valider" />

            <EditText
                android:id="@+id/numEmetteur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:hint="@string/numero_emetteur"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/numDestinataire"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:hint="@string/numero_recepteur"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/montantVirer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:hint="@string/montant_virer"
                android:inputType="number"
                android:minHeight="48dp"
                android:autofillHints="" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>