<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="data"
            type="com.example.splashscreen.Data" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Depot">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:layout_marginBottom="79dp"
                android:background="@color/teal_200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" >

                <Button
                    android:id="@+id/retour"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/retour" />
            </FrameLayout>

            <ImageView
                android:id="@+id/shape"
                android:layout_width="wrap_content"
                android:layout_height="500dp"
                android:layout_marginTop="-100dp"
                android:src="@drawable/imgretrait"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0" />

            <EditText
                android:id="@+id/montantDeposer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:hint="@string/montantDeposer"
                android:inputType="textPersonName"
                android:minHeight="48dp"/>

            <EditText
                android:id="@+id/numeroCompte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:hint="NumeroCompte"
                android:inputType="textPersonName"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/deposer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:text="@string/valider" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>